# BAOZHANGXD

./: .gitignore  CMakeLists.txt  Makefile  README.md  convert_to_docx.py  generate_appendix_images.py  neckedf401re.ioc  结课论文封面.docx  论文_基于FOC算法的轮腿式机器人设计.md  论文_基于FreeRTOS的智能手表嵌入式系统设计与实现.docx  论文_基于FreeRTOS的智能手表嵌入式系统设计与实现.md  项目文档.md
.claude/: settings.local.json
Core/Inc/: cst816d.h  i2s_alarm.h  main.h  rtc_time.h
Core/Src/: cst816d.c  i2s_alarm.c  lcd_gc9a01.c  main.c  rtc_time.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usart.c
lvgl/examples/porting/: lv_port_disp.c  lv_port_disp.c.old  lv_port_disp.c.simple  lv_port_indev.c
